--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
+    "google-auth-library": "9.14.1",
     "lucide-react": "0.365.0",
     "next": "14.1.4",
+    "next-auth": "4.24.8",
     "next-intl": "3.10.0",
     "next-themes": "0.3.0",
     "query-string": "9.0.0",
@@ -47,6 +49,7 @@
     "sonner": "1.4.41",
     "tailwind-merge": "2.2.2",
     "tailwindcss-animate": "1.0.7",
+    "undici": "5.28.4",
     "zod": "3.23.8"
   },
   "devDependencies": {
