--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "1.0.2",
     "@supabase/ssr": "0.3.0",
     "@supabase/supabase-js": "2.43.2",
+    "@types/uuid": "10.0.0",
     "ahooks": "3.8.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
@@ -51,6 +52,7 @@
     "tailwind-merge": "2.2.2",
     "tailwindcss-animate": "1.0.7",
     "undici": "5.28.4",
+    "uuid": "10.0.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
